Fixing a bug.
About body's width with scrollbar.

--- a/css/article-index.css
+++ b/css/article-index.css
@@ -18,6 +18,7 @@ body {
     font-weight: 450;
 
     overflow-x: hidden;
+    overflow-y: scroll;
     background-color: white;
 
     height: 100vh;
